welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:9: error: not found: value i
      setPos(i,0)
             ^